feat: complete order controllers and align swagger documentation
